# atol-qc-raw-shortread

./: CHANGELOG.md  README.md  pyproject.toml
atol_qc_raw_shortread/: Snakefile  __main__.py  process_step_logs.py
atol_qc_raw_shortread/src/: process_step_logs.py
atol_qc_raw_shortread/workflow/: Snakefile
atol_qc_raw_shortread/workflow/report/: stats.json  stats_schema.json
atol_qc_raw_shortread/workflow/rules/: stats.smk
atol_qc_raw_shortread/workflow/scripts/: render_template.py
extras/: Makefile
