[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["snakemake>=9.11.6,<10", "pandas>=2.3.3,<3"]
name = "atol-qc-raw-shortread"
dynamic = ["version"]
description = "python3 wrapper for AToL raw read QC steps (short read version)"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Tom Harrop", email = "tharrop@unimelb.edu.au" }]
requires-python = ">=3.12,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
atol-qc-raw-shortread = "atol_qc_raw_shortread.__main__:main"
process_step_logs = "atol_qc_raw_shortread.src.process_step_logs:main"

[project.urls]
Homepage = "https://github.com/tomharrop/atol-qc-raw-shortread"

[tool.setuptools]
packages = ["atol_qc_raw_shortread"]


[tool.setuptools.package-data]
atol_qc_raw_shortread = [
    "workflow/Snakefile",
    "workflow/rules/stats.smk",
    "workflow/report/stats.json",
]

[tool.setuptools.exclude-package-data]
"*" = ["extras/*"]

[tool.setuptools_scm]
